<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutAnimation="@anim/layout_anim"
                tools:context=".ui.DetailActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutAnimation="@anim/layout_anim">

            <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/header_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:alpha="0.3"
                    android:outlineProvider="bounds"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user1"
                    app:riv_corner_radius="30dp" />

            <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_corner"
                    android:src="@drawable/ic_arrow_back_white_24dp"
                    android:elevation="8dp"
                    android:layout_alignParentLeft="true"/>
            <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="16dp"
                    android:onClick="shareDong"
                    android:background="@drawable/rounded_corner"
                    android:src="@drawable/ic_share_white_24dp"
                    android:elevation="8dp"
                    android:layout_alignParentRight="true"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/gradient_background"
                    android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_avatar_recieved"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_centerHorizontal="true"
                        android:elevation="8dp"
                        android:src="@drawable/user"
                        android:outlineProvider="bounds"
                        android:scaleType="centerCrop"
                        android:transitionName="avatar_transition"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="3dp"
                        tools:src="@color/black" />

                <TextView
                        android:id="@+id/tv_company_recieved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_username_recieved"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/opensans_semibold"
                        android:text="@string/company"
                        android:textSize="16sp"
                        android:transitionName="company_transition" />

                <TextView
                        android:id="@+id/tv_username_recieved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_avatar_recieved"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/opensans_bold"
                        android:maxLines="1"
                        android:text="@string/username"
                        android:textSize="26sp"
                        android:transitionName="username_transition" />

            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/follow_container"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="48dp">

                <androidx.cardview.widget.CardView
                        android:layout_width="300dp"
                        android:layout_height="68dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="24dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="25dp">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <RelativeLayout
                                android:layout_width="120dp"
                                android:layout_height="match_parent">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/followers"
                                    android:textColor="@color/white"
                                    android:textSize="12sp"

                                    android:layout_centerInParent="true"
                                    android:layout_alignParentTop="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginBottom="10dp"
                                    tools:ignore="HardcodedText" />
                            <TextView
                                    android:layout_marginTop="@dimen/dimen_16dp"
                                    android:id="@+id/tv_followers_recieved"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:layout_centerVertical="true"
                                    android:fontFamily="@font/opensans_bold"
                                    android:text="@string/follower_placeholder"
                                    android:textColor="@color/white"
                                    android:textSize="20sp" />

                        </RelativeLayout>

                        <RelativeLayout
                                android:layout_width="120dp"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/following"
                                    android:textColor="@color/white"
                                    android:textSize="12sp"
                                    android:layout_centerInParent="true"
                                    android:layout_alignParentTop="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginBottom="10dp"
                                    tools:ignore="HardcodedText" />
                            <TextView
                                    android:id="@+id/tv_following_recieved"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:fontFamily="@font/opensans_bold"
                                    android:text="@string/following_placeholder"
                                    android:layout_marginTop="@dimen/dimen_5dp"
                                    android:textColor="@color/white"
                                    android:textSize="20sp" />

                        </RelativeLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>


            <androidx.cardview.widget.CardView
                    android:id="@+id/cv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/follow_container"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="25dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.59"
                            android:fontFamily="@font/opensans_semibold"
                            android:gravity="center"
                            android:text="@string/name"
                            android:textSize="16sp"/>

                    <TextView
                            android:id="@+id/tv_name_recieved"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_bold"
                            android:gravity="center"
                            android:text="@string/name_recieved"
                            android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/cv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cv_name"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="25dp">


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.59"
                            android:fontFamily="@font/opensans_semibold"
                            android:gravity="center"
                            android:text="@string/location"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/tv_location_recieved"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_bold"
                            android:gravity="center"
                            android:text="@string/location_recieved"
                            android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cv_location"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="48dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="25dp">



                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.59"
                            android:fontFamily="@font/opensans_semibold"
                            android:gravity="center"
                            android:text="@string/repo"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/tv_repository_recieved"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_bold"
                            android:gravity="center"
                            android:text="@string/repository_recieved"
                            android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>